--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zsh-syntax-highlighting"]
 	path = zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "CoplienGenerator"]
+	path = CoplienGenerator
+	url = https://github.com/Kerosene2000/CoplienGenerator.git
